# Python

1/: 1.funciones.ipynb  1.lambda.ipynb  3.map_y_filter.ipynb  4.ejercicios.ipynb
10/: example.csv  example.xlsx  read_file_csv.ipynb  read_file_xlsx.ipynb  requirements.txt
10/mi_environment_10/: pyvenv.cfg
10/mi_environment_10/Scripts/: activate  activate.bat
11/env/Scripts/: activate  activate.bat
12/: .env  1.api_consult.ipynb  requirements.txt  response.json  response_compañera_api_vieja.json
12/env/: pyvenv.cfg
12/env/Scripts/: activate  activate.bat
13/: 1.pandas_examples.ipynb  2.clase_11.py  3.main_scrapper.py  requirements.txt  zoo_ml.xlsx
13/energia-precios-gas-natural/: energia-precios-gas-natural.html  precios-de-gas-natural-.csv
13/env/: pyvenv.cfg
13/env/Scripts/: activate  activate.bat
14/: README.md  pyproject.toml
14/docs/: guia_pandas.md  guia_poetry.md
14/python_academy_repository/: conceptos_basicos.ipynb  imagen_reshape.ipynb
15/: 0.links_utiles.txt  1.ipynb
2/: 1.generadores.ipynb  2.recursion.ipynb  3.ejercicios.ipynb  attacks_limpio.csv
3/: 1.generar_listas.ipynb  2.matrices_y_anidaciones.ipynb  3.filtrar_listas.ipynb  4.walrus_operator.ipynb  5.crear_generadores.ipynb  6.set_comprehensions.ipynb  7.ejercicios.ipynb
4/: 1.expresiones_regulares.ipynb  2.ejercicios.ipynb
5/: 1.expresiones_regulares.ipynb  2.evaluacion_u1.ipynb
6/: 1.excepciones.ipynb  2.logging.py  3.ejercicio.ipynb  3.ejercicio.py
7/: 1.clases.ipynb  2.herencia.ipynb  3.ejercicios.ipynb
9/: 1.datetime.ipynb
9/prueba/: pyvenv.cfg
(+3 files in other folders)
